# local-rag

./: .env.example  .gitignore  00_PHASE_6_START_HERE.md  00_START_HERE.txt  AGENT.md  CONFIGURATION_GUIDE.md  FIX_API_KEY.md  FIX_IMPORT_ERROR.md  FIX_SUMMARY.txt  INTEGRATION_COMPLETE.txt  MUPDF_ERROR_EXPLANATION.md  PHASES_1_2_COMPLETION_SUMMARY.sh  PHASES_1_2_EXECUTIVE_SUMMARY.md  PHASES_1_2_REVIEW_INDEX.md  PHASES_1_2_VERIFICATION.sh  PHASE_2_COMPLETE.sh  PHASE_2_DELIVERY.md  PHASE_3_COMPLETE.sh  PHASE_4_COMPLETE.sh  PHASE_5_COMPLETE.sh  PHASE_5_DELIVERY.md  PHASE_6_COMPLETION_REPORT.md  PHASE_6_FINAL_SUMMARY.txt  PHASE_6_STATUS.md  PHASE_6_VERIFICATION.sh  QUICK_START.md  README.md  SETUP_GUIDE.md  STORAGE_LAYER_INDEX.md  STORAGE_REQUIREMENTS.md  cli_filesystem_example.py  cli_knowledge_graph_example.py  config.yaml  docling_examples.py  generate_docs.py  main.py  main_async.py  pyproject.toml  rag_cli.py  rag_cli_enhanced.py  (+5 more)
.codellm/rules/: TODO
.github/: copilot-instructions.md
doc/: AGENT_EXAMPLES.py  AGENT_LAYER_IMPLEMENTATION.md  API_KEY_TROUBLESHOOTING.md  CHECKLIST.md  CONFIG_REFERENCE.md  DEEPSEEK_R1_QUICKSTART.md  DOCLING_GUIDE.md  DOCUMENTATION_INDEX.md  FILESYSTEM_METADATA_LAYER.md  FINAL_SUMMARY.md  HOW_TO_VIEW_KNOWLEDGE_GRAPH.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_SUMMARY.md  KNOWLEDGE_GRAPH_IMPLEMENTATION.md  MODEL_COMPATIBILITY_FIX.md  NEXT_STEPS.md  OLLAMA_SETUP.md  PHASES_1_2_COMPLETION_REVIEW.md  PHASE_1_2_REQUIREMENTS_MATRIX.md  PHASE_2_COMPLETION.md  PHASE_3_INTEGRATION.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  PHASE_6_DOCUMENTATION_INDEX.md  PHASE_7_PREPARATION.md  QUICKSTART.md  README.md  STORAGE_LAYER_PHASE_2.md  STORAGE_LAYER_SETUP.md  index.html
legacy/: main.py  rag_cli.py
src/: __init__.py  config.py
src/agent/: __init__.py  agent.py
src/api/: __init__.py
src/ingestion/: __init__.py  docling_utils.py  filesystem.py
src/storage/: __init__.py  knowledge_graph.py  metadata.py  neo4j_graph.py  postgres.py
src/utils/: logging.py
tests/agent/: __init__.py  test_agent.py  test_agent_integration.py
tests/ingestion/: __init__.py  test_filesystem_integration.py
tests/storage/: test_knowledge_graph.py  test_knowledge_graph_integration.py  test_storage_layer.py
